class Sword {
  String name;
  int damage;

  Sword({required this.name, required this.damage});
}