@startuml

class Hero {
  - String name
  - int hp
  - Sword? sword
  - int mp
  + Hero(name: String, hp: int, sword: Sword?)
  + void attack()
  + void run()
  + void sleep()
}

class Sword {
  - String name
  - int damage
  + Sword(name: String, damage: int)
}

class Slime {
  + int hp
  + Slime(suffix: int)
  + void attack(hero: Hero)
}


class PoisonSlime extends Slime {
 - int _poisonCount
  + PoisonSlime(suffix: int)
  + @override
  + void attack(hero: Hero)
}


class Wizard {
  - String _name
  - int _hp
  - Wand? _wand
  - int _mp
  + Wizard(name: String, hp: int, mp: int = 100, wand: Wand?)
  + String get name => _name
  + set name(String value) => _name = value
  + int get hp => _hp
  + set hp(int value) => _hp = value
  + int get mp => _mp
  + set mp(int value) => _mp = value
  + Wand? get wand => _wand
  + set wand(Wand? value) => _wand = value
  + void heal(hero: Hero)
}

class Wand {
  - String _name
  - double _power
  + Wand(name: String, power: double)
  + String name
  + double power
  + void name(String name)
  + void power(double power)
}



class GreatWizard extends Wizard {
 + GreatWizard(name: String, hp: int, mp: int, wand: Wand?) : super(name, hp, mp, wand)
 + void superHeal(hero: Hero)
}

' 관계 정의

Hero "1" *-- "1" Sword : 소유
Hero "1" *-- "*" Slime : 공격
Wizard "1" *-- "1" Wand : 소유
Wizard "1" *-- "*" Hero : 힐 대상
GreatWizard "1" *-- "1" Wand : 소유
GreatWizard "1" *-- "*" Hero : 힐 대상


@enduml
